# SpecLens-PML

./: .gitignore  Dockerfile.jenkins  Jenkinsfile  README.md  SpecLens_DevelopmentPlan.md  SpecLens_Governance.md  SpecLens_SSD.md  app.py  config.yaml  ct_trigger.py  demo.py  pyproject.toml  requirements.txt  reset.sh
data/: datasets_v1.csv
data/raw/: example1.py  example2.py  example_err.py
data/raw_feedback/: example015.py
data/raw_test/: example012.py  example013.py
data/raw_train/: example001.py  example002.py  example003.py  example004.py  example005.py  example006.py  example007.py  example008.py  example009.py  example010.py  example011.py
data/raw_unseen/: example014.py
docs/source/: api.rst  conf.py  index.rst  modules.rst  pml.rst
inference/: predict.py
models/: active_model.txt  best_model.pkl  model_v1.pkl
pipeline/: build_dataset.py  features.py  train.py
pml/: __init__.py  parser.py
