[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speclens-pml"
version = "0.1.0"
description = "Data-driven Software Correctness with MLOps"
authors = [
    { name="Massimo Costantini" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "joblib",
    "pandas",
    "PyYAML",
    "scikit-learn",
    "sphinx",
    "sphinx-rtd-theme",
    "streamlit"
]

[tool.setuptools.packages.find]
where = ["."]
